# olypack

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  copier.yml  init.sh  install_sty.sh  olypack.mk  olypack.py  produce-draft.py  produce-packet.py  produce-receipts.py  produce-scores.py  produce-test.py  pyproject.toml  shuffle-packet.py  utils.py
final-report/: final-NO-SEND-report.tex.jinja
jinja-templates/: authors.tsv.jinja  comments.tex.jinja  data-index.tex.jinja  data-probs.tex.jinja  data-solns.tex.jinja  form-script.js.jinja  problems-day.tex.jinja  receipt.mkd.jinja  solutions-day.tex.jinja  table.tex.jinja  table.txt.jinja
olypack/: produce-packet.py  produce-test.py  shuffle-packet.py
packet/: internal-NO-SEND-solns.tex
scripts/: assemble.py  collate-test-solve.py  make-table-twn.py  produce-draft.py  produce-receipts.py  produce-scores.py
src/olypack/: __init__.py  cli.py  pdf.py  produce_packet.py  produce_receipts.py  produce_scores.py  produce_test.py  shuffle_packet.py  utils.py
template/: .gitignore  Makefile  Makefile.jinja  build.py  copier.yml  data.yaml  data.yaml.copier.jinja  data.yaml.tmpl  gitignore  password  password.tmpl
template/final-report/: final-NO-SEND-report.tex  final-NO-SEND-report.tex.copier.jinja  final-NO-SEND-report.tex.copier.tmpl
template/olypack/: __init__.py  produce-receipts.py  produce-scores.py  utils.py
template/packet/: instructions.tex  internal-NO-SEND-probs.tex  meta.sty  meta.sty.jinja  reviewers.txt.jinja
template/test/: final-probs.tex  (+5 more)
tex/: internal-NO-SEND-probs.tex
(+6 files in other folders)
